--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.17.2",
+    "circular-json": "^0.5.1",
     "cross-env": "^5.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
